# Tinyrenderer_test

./: .gitignore  CMakeLists.txt  main.cpp
TgaImage-lib/: CMakeLists.txt
source/: model.cpp
sources/: model.cpp
